overflow fixed yay

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ header {
     height: auto;
     width: auto;
     padding: 10px;
-    max-height: 500px; 
+    max-height: 275px; 
     overflow-y: auto;
 }
 
@@ -154,6 +154,8 @@ header {
     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     max-width: 800px;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 .advisory {
